# nupu-8

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  foo.asm
assembler/: Cargo.toml
assembler/src/: error.rs  lib.rs
cpu/: Cargo.toml
cpu/src/: error.rs  lib.rs
example/: foo.asm
shared/: Cargo.toml
shared/src/: lib.rs
src/: display.rs  main.rs  runner.rs  tui.rs
