[package]
name = "nupu-8"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
assembler = { path = "./assembler" }
cpu = { path = "./cpu" }
anyhow = "1.0.102"
log = "0.4.29"
env_logger = "0.11.9"
colored = "3.1.1"
ratatui = "0.30.0"

[workspace]
members = [
    "assembler", "cpu",
    "shared"
]
